...
      topBar = {
        TopAppBar(
            modifier = Modifier.fillMaxWidth().statusBarsPadding(),
            title = {
              Text(
                  modifier = Modifier.testTag("profile_title"),
                  text = "Profile",
                  color = MaterialTheme.colorScheme.onSurface)
            },
            backgroundColor = MaterialTheme.colorScheme.surface,
            actions = {
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.SETTINGS) },
                  modifier = Modifier.testTag("settings_button")) {
                    Icon(
                        Icons.Outlined.Settings,
                        contentDescription = "Settings",
                        modifier =
                            Modifier.size(AppDimensions.iconSizeMedium).testTag("settings_icon"),
                        tint = MaterialTheme.colorScheme.onSurfaceVariant)
                  }
            },
            navigationIcon = {
...
                    // Navigate to the sign in screen
                    navigationActions.navigateTo(Screen.AUTH)
                  },
                  modifier = Modifier.testTag("sign_out_button")) {
                    Icon(
                        Icons.AutoMirrored.Filled.Logout,
                        contentDescription = "Sign out",
                        modifier =
                            Modifier.size(AppDimensions.iconSizeMedium).testTag("sign_out_icon"),
                        tint = MaterialTheme.colorScheme.onSurface)
                  }
            })
      },
...
                                  .offset(y = (-AppDimensions.profilePictureSize / 2)))

                      // Edit button
                      Button(
                          onClick = { navigationActions.navigateTo(Screen.EDIT_PROFILE) },
                          modifier =
                              Modifier.testTag("edit_button")
                                  .size(AppDimensions.spacingXLarge)
                                  .align(Alignment.TopEnd)
                                  .offset(y = -AppDimensions.paddingMediumSmall),
                          // .offset(x = (AppDimensions.profilePictureSize / 2.2f)),
                          shape = AppShapes.circleShape,
                          colors =
...

                // stats section
                CardSection(
                    title = "My stats",
                    imageVector = Icons.Outlined.QueryStats,
                    onClick = { navigationActions.navigateTo(Screen.STAT) },
                    modifier = Modifier.testTag("statistics_section"))

                Spacer(modifier = Modifier.height(AppDimensions.paddingSmall))

                // Previous Sessions Section
                CardSection(
                    title = "Previous Recordings",
                    imageVector = Icons.Outlined.History,
                    onClick = { navigationActions.navigateTo(Screen.OFFLINE_RECORDING_PROFILE) },
                    modifier = Modifier.testTag("previous_sessions_section"))
              }
                  ?: run {
                    Text(
                        text = "Loading profile...",
                        style = AppTypography.bodyLargeStyle,
                        modifier = Modifier.testTag("loading_profile_text"))
...
