...
                "Actions",
                modifier = Modifier.testTag("viewFriendsDrawerTitle"),
                style = MaterialTheme.typography.titleMedium,
                color = MaterialTheme.colorScheme.primary)
            Spacer(modifier = Modifier.height(AppDimensions.heightMedium))
            TextButton(
                modifier = Modifier.testTag("viewFriendsAddFriendButton"),
                onClick = {
                  scope.launch {
                    drawerState.close()
                    navigationActions.navigateTo(Screen.ADD_FRIENDS)
                  }
                }) {
                  Text("➕ Add a friend", color = MaterialTheme.colorScheme.onSurface)
                }
            Spacer(modifier = Modifier.height(AppDimensions.paddingMedium))
            TextButton(
                modifier = Modifier.testTag("viewFriendsLeaderboardButton"),
                onClick = {
                  scope.launch {
                    drawerState.close()
                    navigationActions.navigateTo(Screen.LEADERBOARD)
                  }
                }) {
...
                        modifier = Modifier.testTag("myFriendsTitle"),
                        color = MaterialTheme.colorScheme.onSurface)
                  },
                  navigationIcon = {
                    IconButton(
                        onClick = { scope.launch { drawerState.open() } },
                        modifier = Modifier.testTag("viewFriendsMenuButton")) {
                          Icon(
                              Icons.Default.Menu,
                              contentDescription = "Menu",
                              tint = MaterialTheme.colorScheme.onSurface)
                        }
                  },
...
                            },
                            modifier =
                                Modifier.fillMaxWidth(1f)
                                    .horizontalScroll(rememberScrollState())
                                    .wrapContentHeight()
                                    .focusRequester(focusRequester)
                                    .testTag("viewFriendsSearch"),
                            colors =
                                TextFieldDefaults.outlinedTextFieldColors(
                                    backgroundColor = MaterialTheme.colorScheme.surface,
                                    textColor = MaterialTheme.colorScheme.onSurface,
                                    focusedBorderColor = MaterialTheme.colorScheme.outline,
                                    unfocusedBorderColor = MaterialTheme.colorScheme.outlineVariant,
...
