...
    val iconDescription: String
)

// creating a list of all settings to implement them with a simple loop
val listOfSettings =
    listOf(
        SettingBar("Permissions", "permissions", Icons.Outlined.Lock, "lock icon"),
        SettingBar("Theme", "theme", Icons.Outlined.DarkMode, "theme"),
        SettingBar("About", "about", Icons.Outlined.Info, "info icon"))

// reusable function that is called to add a section to settings
@Composable
fun TextButtonFun(settingBar: SettingBar, onClick: () -> Unit = {}) {
...
                  color = MaterialTheme.colorScheme.onSurface,
                  modifier = Modifier.testTag("SettingsText"))
            },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("back_button")) {
                    androidx.compose.material.Icon(
                        Icons.Outlined.ArrowBackIosNew,
                        contentDescription = "Back button",
                        modifier = Modifier.size(AppDimensions.iconSizeMedium),
                        tint = MaterialTheme.colorScheme.onSurface)
                  }
...
